[package]
name = "api-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cucumber = {version = "0.21.1", features = ["macros"]}


[dependencies]
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["json"] }
serde =  {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.118"
once_cell = "1.19.0"
serde_yaml = "0.9.34"
cucumber = {version = "0.21.1", features = ["macros"]}
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
serde_urlencoded = "0.7.1"

[[test]]
name = "test_runner" # this should be the same as the filename of your test target
harness = false
